--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 		<div id="pageTitle">{{site.coursename}}: {{page.title}}</div>
 		{{content}}
 	</div>
+  <div id="footer"></div>
 </body>
 
 </html>
